--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -37,7 +37,7 @@
 .container-nav {
   z-index: 1;
   width: 100%;
-  max-width: 1800px;
+  max-width: 1700px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 10px;
@@ -53,6 +53,7 @@
   display: flex;
   align-items: center;
   font-weight: 600;
+  padding-bottom: 0.5rem;
 }
 .navbar-icon {
   width: 10rem;
@@ -100,7 +101,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding: 2.5rem 1.8rem 0.8rem;
+  padding: 2.5rem 1.8rem 1.5rem;
 
   font-weight: bold;
   height: 100%;
@@ -152,7 +153,6 @@
   .navbar-icon {
     width: 10rem;
     height: auto;
-
     cursor: pointer;
     display: flex;
     align-content: left;
